--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -14,6 +14,7 @@ collections:
         - { label: "Title", name: "title", widget: "string"}
         - { label: "Publish Date", name: "date", widget: "datetime" }
         - { label: "Body", name: "body", widget: "markdown"}
+        - { label: "Image", name: "image", widget: "image"}
         - label: 'Cats'
           name: "cats"
           widget: list
